// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`husky hg should not matter where the user defined hooks are 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
#husky-hg:begin
changegroup=.hg/hooks/changegroup
incoming=.hg/hooks/incoming
outgoing=.hg/hooks/outgoing
preoutgoing=.hg/hooks/preoutgoing
pretag=.hg/hooks/pretag
pretxnchangegroup=.hg/hooks/pretxnchangegroup
pretxncommit=.hg/hooks/pretxncommit
preupdate=.hg/hooks/preupdate
#husky-hg:end
[extensions]"
`;

exports[`husky hg should not modify user hooks 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
#husky-hg:begin
changegroup=.hg/hooks/changegroup
incoming=.hg/hooks/incoming
outgoing=.hg/hooks/outgoing
preoutgoing=.hg/hooks/preoutgoing
pretag=.hg/hooks/pretag
pretxnchangegroup=.hg/hooks/pretxnchangegroup
pretxncommit=.hg/hooks/pretxncommit
preupdate=.hg/hooks/preupdate
#husky-hg:end"
`;

exports[`husky hg should remove the husky section on uninstall 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
"
`;
